[package]
name = "rarsero"
version = "0.1.0"
authors = ["joaco"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking"] }
tokio = { version = "0.2", features = ["full"] }
rayon = "1.5.0"
colored = "2.0.0"
