[package]
name = "rarsero"
version = "0.1.0"
authors = ["joaco"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking"] }
tokio = "0.3.3"
rayon = "1.5.0"
colored = "2.0.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-unit = 1
panic = 'abort'